<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.setting.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/favorite_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/detail_button_back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/toolbar_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar" />

    <ImageView
        android:id="@+id/img_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar"
        android:contentDescription="@string/settings" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/language"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_language"
        app:layout_constraintTop_toTopOf="@+id/img_language"
        app:layout_constraintBottom_toTopOf="@id/tv_change_language"/>

    <TextView
        android:id="@+id/tv_change_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_language"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_language"
        app:layout_constraintTop_toBottomOf="@id/tv_language" />

    <ImageView
        android:id="@+id/img_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_language"
        android:contentDescription="@string/reminder" />

    <TextView
        android:id="@+id/tv_daily_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daily_reminder"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/switch_alarm"
        app:layout_constraintStart_toEndOf="@+id/img_reminder"
        app:layout_constraintTop_toTopOf="@+id/img_reminder"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_reminder_status"/>


    <TextView
        android:id="@+id/tv_daily_reminder_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daily_reminder_off"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_reminder"
        app:layout_constraintEnd_toStartOf="@id/switch_alarm"
        app:layout_constraintStart_toEndOf="@id/img_reminder"
        app:layout_constraintBottom_toBottomOf="@id/img_reminder"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:thumb="@drawable/switch_thumb"
        app:track="@drawable/switch_track"
        app:layout_constraintTop_toTopOf="@id/tv_daily_reminder"
        app:layout_constraintBottom_toBottomOf="@id/tv_daily_reminder_status"/>

</androidx.constraintlayout.widget.ConstraintLayout>